Fixed bug #41713 (Persistent memory consumption on win32 since 5.2)